k8s/romm/resources/web-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: web
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      securityContext:
        fsGroup: 1000
      volumes:
        - name: tmp
          emptyDir: {}
        - name: config
          configMap:
            name: config
        - name: nfs-media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: assets-volume
          persistentVolumeClaim:
            claimName: assets-volume
        - name: resources-volume
          persistentVolumeClaim:
            claimName: resources-volume
      containers:
        - name: romm
          image: ghcr.io/rommapp/romm:4.4.1@sha256:b909e95d1aab88db9817be700183fda8d24094b3e7c28355ddbd066e2659fc8f
          resources:
            requests:
              memory: 100M
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: config
              mountPath: /romm/config/config.yml
              subPath: config.yml
              readOnly: true
            - name: tmp
              mountPath: /tmp

            - name: assets-volume
              mountPath: /romm/assets
            - name: resources-volume
              mountPath: /romm/resources

            - name: nfs-media
              mountPath: /romm/library
              subPath: romm/library
          ports:
            - name: http
              containerPort: 8080
