k8s/romm/resources/mariadb.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb-deployment
  annotations:
    reloader.stakater.com/auto: 'true'
  labels: &labels
    app.kubernetes.io/component: mariadb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: mariadb-volume
          persistentVolumeClaim:
            claimName: mariadb-volume
        - name: tmp
          emptyDir: {}
        - name: run-mysqld
          emptyDir: {}
      containers:
        - name: romm-mariadb
          image: docker.io/library/mariadb:12.1@sha256:e1bcd6f85781f4a875abefb11c4166c1d79e4237c23de597bf0df81fec225b40
          resources:
            requests:
              memory: 100M
            limits:
              memory: 1G
          securityContext:
            privileged: false
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          volumeMounts:
            - name: mariadb-volume
              mountPath: /var/lib/mysql
            - name: tmp
              mountPath: /tmp
            - name: run-mysqld
              mountPath: /run/mysqld
          ports:
            - name: mysql
              containerPort: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app.kubernetes.io/component: mariadb
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
